# perkedel-astro

./: .gitignore  .gitmodules  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  astro.config.mjs  cypress.config.ts  netlify.toml  package-lock.json  package.json  packagescrap.txt  perkedel-astro.code-workspace  scrap toml netlify.txt  tsconfig.json
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  proposal.yml
.github/PULL_REQUEST_TEMPLATE/: additions.yml  bugfix.yml
cypress_bak/e2e/: basic.cy.ts
netlify/functions/hello-world/: hello-world.ts
public/: BingSiteAuth.xml  _headers  _redirects  extra.js  generateWord.json  generateWord.jsonc  index.txt  index_werror.txt  main.js  pinterest-c337e.html  pretty-feed-v3-dark.xsl  rss-styles.xsl  sitemap-manual.xml  style.css  undefined-after.js  undefined.js
public/.well-known/: brave-rewards-verification.txt
public/rawHtml/: README.md
scrappe/: extra.js  index.txt
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/: AppListOwn.mdx  AppListSomeone.mdx  BackToTopButton.astro  BouncingVideosSlain.astro  ButtonizedLink.astro  EmbedRAWHTML.astro  EmbedVideo.astro  EmbedVideoDiscord.astro  Footering.astro  Headering.astro  Layout.astro  LayoutMDX.astro  NoZeronet.astro  PluginsUsed.astro  PluginsUsed.mdx
src/content/: config.ts
src/pages/: 404.astro  _rss_posts.xml.js  another.astro  index.astro  l.astro  rss.xml.js  rss_old.xml.js  rss_posts.xml.js
src/pages12/: index.astro
src/style/: style.css
src_curl/: index.sh
(+924 files in other folders)
