[package]
name = "app"
version = "2023.1.0"
description = "Perkedel NTLF+ASTR website packed with Tauri"
authors = ["JOELwindows7"]
license = "GNU AGPL v3"
repository = "https://github.com/Perkedel/perkedel-astro"
default-run = "app"
edition = "2021"
rust-version = "1.59"
readme = "../README.md"
keywords = ["Utility","website","netlify","tauri","astro","framework","perkedel"]
homepage = "https://perkedel.netlify.app"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.2.0", features = ["clipboard-all", "dialog-all", "http-all", "path-all", "window-all"] }
# tauri-egui = "0.1"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
